--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 white-space: nowrap;
                 overflow: hidden;
                 font-family: monospace;
-                font-size: 1.5em;
+                font-size: 1.7em;
             }
 
 
@@ -247,7 +247,7 @@
 
                         <div class="wrapper">
 
-                        <h1 id="hedtext1" class="headtext mb-5">Hello, my name is James.</h1>
+                        <h1 id="hedtext1" class="headtext mb-5 d-sm-flex">Hello, my name is James.</h1>
 
                     </div>
 
@@ -799,7 +799,7 @@
             const faders = document.querySelectorAll('.fade-in');
 
             const appearOptions = {
-                threshold: 0.3,
+                threshold: 0.2,
 
             };
 
